--- a/QuMixDroid/res/layout/activity_main.xml
+++ b/QuMixDroid/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -23,7 +24,7 @@
         android:layout_marginTop="55dp"
         android:text="Button" />
 
-    <ToggleButton
+    <org.wieggers.qu_apps.qumixdroid_boundcontrols.BoundMuteToggleButton
         android:id="@+id/tbMute1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,5 +35,13 @@
         android:text="ToggleButton"
         android:textOff="@string/mute"
         android:textOn="@string/mute" />
+
+    <org.wieggers.qu_apps.qumixdroid_controls.Fader
+        android:layout_width="202dp"
+        android:layout_height="258dp"
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="74dp"
+        android:layout_toRightOf="@+id/tbMute1"
+        app:channel_name="Master" />
 
 </RelativeLayout>
